# ChangeLog for net-dns/avahi
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dns/avahi/ChangeLog,v 1.178 2010/07/11 10:25:52 klausman Exp $

  11 Jul 2010; Tobias Klausmann <klausman@gentoo.org>
  avahi-0.6.25-r1.ebuild:
  Stable on alpha, bug #278177

  28 Jun 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  avahi-0.6.25-r1.ebuild:
  x86 stable wrt bug #278177

  25 Jun 2010; Christoph Mende <angelos@gentoo.org> avahi-0.6.25-r1.ebuild:
  Stable on amd64 wrt bug #278177

  24 Jun 2010; Sven Wegener <swegener@gentoo.org> avahi-0.6.25-r1.ebuild:
  Fix broken intltool rules, bug #319057.

  19 May 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  avahi-0.6.24-r2.ebuild, avahi-0.6.25.ebuild, avahi-0.6.25-r1.ebuild:
  Use Python 2 (bug #315093).

*avahi-0.6.25-r1 (09 Feb 2010)

  09 Feb 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  +avahi-0.6.25-r1.ebuild:
  Port avahi to EAPI=2 to avoid built_with_use calls, restrict dbus
  dependency to something definitely more modern.

  03 Jan 2010; Samuli Suominen <ssuominen@gentoo.org>
  avahi-0.6.24-r2.ebuild, avahi-0.6.25.ebuild:
  Raise intltool depend to >= 0.40.5 wrt #265542.

  03 Jan 2010; Samuli Suominen <ssuominen@gentoo.org>
  avahi-0.6.24-r2.ebuild, avahi-0.6.25.ebuild:
  Remove unused USE="qt3" support wrt bug #283429.

  06 Oct 2009; Dominik Kapusta <ayoy@gentoo.org> avahi-0.6.24-r2.ebuild,
  avahi-0.6.25.ebuild:
  Removed alternative dependency on Qt metapackage

  13 Aug 2009; Sven Wegener <swegener@gentoo.org> avahi-0.6.24-r2.ebuild,
  avahi-0.6.25.ebuild:
  Install NEWS file, bug #274757.

*avahi-0.6.25 (17 Apr 2009)

  17 Apr 2009; Sven Wegener <swegener@gentoo.org> +avahi-0.6.25.ebuild:
  Version bump.

  17 Apr 2009; Sven Wegener <swegener@gentoo.org>
  -files/avahi-0.6.1-no-ipv6.patch,
  -files/avahi-0.6.19-assert-security.patch,
  -files/avahi-0.6.19-ui-sharp-automake.patch,