@@ -5,8 +5,10 @@ AUX avahi-0.6.24-cmsg_space.patch 449 RMD160 9593ee893daf908e35f36a7396ae5d52a76
 AUX avahi-0.6.24-libintl.patch 542 RMD160 918aa11cdbce6f38d9a9446c798db2bc43a957b5 SHA1 c9f8ef5d0047b591e6e88153731ae380d64a2431 SHA256 fb8e37d6071a990184a7ad3c20a7709554103fb2c4f02450c338b9fbcf358215
 DIST avahi-0.6.24.tar.gz 1115626 RMD160 94f59ccbd14d99e91e259b27dd7f03404c6691e6 SHA1 a187af361fefc8bda026936bb07ccdeb41dc74bc SHA256 260070d46188ed58f5dc1174ce632c096679f6391a2b729366e7aba349d4b950
 DIST avahi-0.6.25.tar.gz 1103653 RMD160 3025f774360a8ea3b9de87e2df0b00387569aaf2 SHA1 7ce8ed5a494d72401dd81f64594fda59d2ec91fd SHA256 9220d974f5515b8ccfa3900cd72cedcac0fa4cc87ca3c64405f7c55346cbba59
+DIST avahi-0.6.27.tar.gz 1217974 RMD160 36e6a242f0c926351e31871d8a4f8a52a501fdc3 SHA1 e763bbeba92fd5b3ba3e2af5fc85aaf99b406c8b SHA256 c22df5e0b0d695bfe3cc52545bf0affc1c52060818a5a65d70055e320bc45e84
 EBUILD avahi-0.6.24-r2.ebuild 5400 RMD160 f955a49312b3d0b269e08358c1dce3a6ad00f037 SHA1 12f531483b56407b83be6ed2639d79f671c23226 SHA256 8ea2e741aea77123d87ba83f71cdebde92886e8716554916b87a9a79bd67d018
-EBUILD avahi-0.6.25-r1.ebuild 5009 RMD160 c675765591690f777a0fc391ba556d2789e4a5c9 SHA1 57530a1a4bfcebc0fa8ff5e3d58e4398e08b6caf SHA256 2c94e09078e756b40e4040c3151788f9be3bc7abd26e57768ce40c1547b77c0f
+EBUILD avahi-0.6.25-r1.ebuild 5002 RMD160 371538bfc5e7697224a0dd7acb234e3c1be5eda8 SHA1 4960afb8c6350c6efb93273331cbad4ead4111c4 SHA256 42854614fbbea0d6c8fd6f60fe62da084f32c663630adbd0692df50eed9edc91
 EBUILD avahi-0.6.25.ebuild 5352 RMD160 0fb9fe844fba482fbfc95caf8744b71539c55324 SHA1 353f53cbbf73ed27c5b85629fd2e09374f08a251 SHA256 854cb5b236f3109a227970a9aa99904c1f947680a8bef1345c3e98bdc89d0efa
-MISC ChangeLog 26599 RMD160 f15ced1906cad58e842153423fc9df9d72935abd SHA1 28166f45e7b7e56b3943aa49e71d8167d254fea4 SHA256 ef2bdc7f8e81d6f0df3943f146c759f62443299a3dd9739a4f4ade6266989503
+EBUILD avahi-0.6.27.ebuild 4679 RMD160 8ea7c8f93c28455161164f508b6ee46532fb1e23 SHA1 b74b902c640695c5cb73e2f75a23b6c07bef08bb SHA256 75995b26ecbcbb4d6d4a42882034acebd44f932bd8d0d9db3e149989aac07d21
+MISC ChangeLog 26921 RMD160 9ffda3d09b4ce12b7a3a9d001c6385e1466bb468 SHA1 aac52a0fde4f6da1014dc4f50aafea3b7e9ca5a4 SHA256 f97da840a81ace55b4a3e52625646d4dc69c7931a871777aa2ad1b4ca5226013
 MISC metadata.xml 609 RMD160 fa4efaaf9b8ac6d75251c9bd1f0721ea175acda9 SHA1 4532738c9ff6d9d2a2aef226b827919ac31be2de SHA256 365224bb3c21c159a89fa03ea08c534eb27cc2df62012a69e03ad81779607faa
