@@ -1,6 +1,17 @@
 # ChangeLog for net-dns/avahi
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/avahi/ChangeLog,v 1.178 2010/07/11 10:25:52 klausman Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/avahi/ChangeLog,v 1.181 2010/08/03 20:09:38 swegener Exp $
+
+*avahi-0.6.27 (03 Aug 2010)
+
+  03 Aug 2010; Sven Wegener <swegener@gentoo.org> +avahi-0.6.27.ebuild:
+  Version bump.
+
+  03 Aug 2010; Jeroen Roovers <jer@gentoo.org> avahi-0.6.25-r1.ebuild:
+  Stable for HPPA (bug #278177).
+
+  19 Jul 2010; Markus Meier <maekke@gentoo.org> avahi-0.6.25-r1.ebuild:
+  arm stable, bug #278177
 
   11 Jul 2010; Tobias Klausmann <klausman@gentoo.org>
   avahi-0.6.25-r1.ebuild:
